@@ -2,7 +2,6 @@
 package org.deltava.taskman;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.*;
 
@@ -12,7 +11,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A class to control execution of Scheduled Tasks. This operates much like a Unix-style cron daemon in that it checks whether a task should be executed once every 60 seconds.
  * @author Luke
- * @version 11.1
+ * @version 12.5
  * @since 1.0
  */
 
@@ -105,7 +104,7 @@ public class TaskScheduler implements Runnable, Thread.UncaughtExceptionHandler 
 	 */
 	public Collection<TaskInfo> getTaskInfo() {
 		Collection<Task> tasks = new TreeSet<Task>(_tasks.values());
-		return tasks.stream().map(TaskInfo::new).collect(Collectors.toList());
+		return tasks.stream().map(TaskInfo::new).toList();
 	}
 	
 	@Override
